--- a/src/contents/index.css
+++ b/src/contents/index.css
@@ -1,4 +1,24 @@
-.header {
-  height: 50px;
-  padding-left: 20px;
-  width: 100%; }
+.content-list {
+  max-width: 960px;
+  margin: 0 auto; }
+
+.article {
+  list-style: none;
+  border-bottom: 1px solid #BDBDBD;
+  padding: 10px; }
+  .article .title {
+    color: #37474F;
+    font-size: 22px;
+    font-weight: bold;
+    height: 40px;
+    line-height: 40px; }
+  .article .authod {
+    color: #78909C;
+    font-size: 12px;
+    padding-right: 20px; }
+  .article .desc {
+    color: #607D8B;
+    font-size: 14px;
+    padding: 30px 0; }
+  .article .more {
+    padding: 0 20px; }
