--- a/src/contents/index.scss
+++ b/src/contents/index.scss
@@ -1,5 +1,34 @@
-.header{
-  height: 50px;
-  padding-left: 20px;
-  width: 100%;
+.content-list{
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.article{
+  list-style: none;
+  border-bottom: 1px solid #BDBDBD;
+  padding: 10px;
+
+  .title{
+    color:#37474F;
+    font-size: 22px;
+    font-weight:bold;
+    height: 40px;
+    line-height: 40px;
+  }
+
+  .authod{
+    color:#78909C;
+    font-size: 12px;
+    padding-right: 20px;
+  }
+
+  .desc{
+    color:#607D8B;
+    font-size: 14px;
+    padding: 30px 0;
+  }
+
+  .more{
+    padding: 0 20px;
+  }
 }
